--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald:wght@300&display=swap');
-body }
 
-font-family: Arial;
+*  {
+margin: 0;
+padding: 0;
+border: none;
+}
 
+
+body  {
+font-family: Lato, sans-serif;
 }
