--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,3 +31,33 @@ h1, h2 {
     font-size: 280%;
 
 }
+
+#menu {
+
+    font-size: 110%;
+    letter-spacing: 4px;
+
+}
+
+#menu, #logo {
+
+    line-height: 75px;
+
+}
+
+
+#menu li {
+
+    float: right;
+    margin-right: 30px;
+    list-style-type: none;
+
+}
+
+#menu a {
+
+    text-decoration: none;
+    color: inherit;
+
+}
+
